app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: university-deploy
  namespace: thanu-ns1
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: college-app
  template:
    metadata:
      labels:
        app: college-app  
    spec: 
      containers:
      - name: app
        image: nimeshsv814/duniversity-portal:v1.1.0
        ports:
          - containerPort: 3000
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "400m"
            memory: "512Mi"   
---
apiVersion: v1
kind: Service
metadata:
  name: du-svc
  namespace: thanu-ns1
spec:
  selector:
    app: college-app
  ports:
    - port: 3001
      targetPort: 3000
  type: ClusterIP
