mysql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  namespace: thanu-ns1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql-cont
        image: mysql
        ports:
          - containerPort: 3306
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"

        volumeMounts:
        - name: dumysql-storage
          mountPath: /var/lib/mysql
        - name: mysql-q
          mountPath: /docker-entrypoint-initdb.d  
      volumes:
      - name: dumysql-storage
        persistentVolumeClaim:
            claimName: dudynamic-pvc   
      - name: mysql-q
        configMap:
          name: mysql-init      


---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: thanu-ns1
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
