rego.yaml
# apiVersion: templates.gatekeeper.sh/v1beta1
# kind: ConstraintTemplate
# metadata:
#   name: k8srequiredresources
# spec:
#   crd:
#     spec:
#       names:
#         kind: K8sRequiredResources
#   targets:
#     - target: admission.k8s.gatekeeper.sh
#       rego: |
#         package k8srequiredresources

#         violation[{"msg": msg}] {
#           container := input.review.object.spec.containers[_]
#           not has_limits(container)
#           msg := sprintf("Container %v must have resource limits", [container.name])
#         }
#         has_limits(c) {
#           c.resources.limits
#         }
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredresources
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredResources
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredresources
 
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.resources.limits
          msg := sprintf("Container %v must have resource limits", [container.name])
        }
